tests/fixtures/errors/required_index_standalone.gcl
cat Phase;

param cost: Dimensionless[Phase];
